[ignore] small optimization: use valueOf instead of calling constructor
svn path=/trunk/eXist/; revision=13147


Former-commit-id: 0ac26cdaaeeb2cb0e2d32047702cb76d6a61309a